@@ -43,6 +43,7 @@
     <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <!-- logstash-logback-encoder:7.4+ requires logback 1.3+ and slf4j 2.0+, only available on spring-boot 3.0+ -->
     <logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
+    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -888,7 +889,7 @@
           <configuration>
             <reuseForks>false</reuseForks>
             <forkCount>1C</forkCount>
-            <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</argLine>
+            <argLine>${argLine}</argLine>
             <systemPropertyVariables>
               <!-- remove when it's not necessary anymore for Java 25 -->
               <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
@@ -1164,15 +1165,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <argLine>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED 
-				--add-opens=java.base/java.lang=ALL-UNNAMED 
-				--add-opens=java.base/java.util=ALL-UNNAMED 
-				--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
-				--add-opens=java.base/java.text=ALL-UNNAMED 
-				--add-opens=java.desktop/java.awt.font=ALL-UNNAMED 
-				--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED 
-				--add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-				${surefire.jacoco.args}</argLine>
+              <argLine>${argLine} ${surefire.jacoco.args}</argLine>
             </configuration>
           </plugin>
           <plugin>
@@ -1182,15 +1175,7 @@
               <reuseForks>false</reuseForks>
               <forkCount>1C</forkCount>
               <trimStackTrace>false</trimStackTrace>
-              <argLine>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED 
-				--add-opens=java.base/java.lang=ALL-UNNAMED 
-				--add-opens=java.base/java.util=ALL-UNNAMED 
-				--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
-				--add-opens=java.base/java.text=ALL-UNNAMED 
-				--add-opens=java.desktop/java.awt.font=ALL-UNNAMED 
-				--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED 
-				--add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-				${failsafe.jacoco.args}</argLine>
+              <argLine>${argLine} ${failsafe.jacoco.args}</argLine>
             </configuration>
             <executions>
               <execution>
